# parametric_trajectory_generator

./: CMakeLists.txt  LICENSE  README.md
include/: trajectory_generator.h
python/: trajectory_generator_demo.py
src/: python_wrapper.cpp  trajectory_generator.cpp
